--- a/locations.html
+++ b/locations.html
@@ -84,7 +84,7 @@
                      <div class="row">
                         <div class="col-xs-12">
                            <div class="location-info">
-                              <img src="../img/location-avery.png" class="clip-circle" />
+                              <img src="img/location-avery.png" class="clip-circle" />
                               <p>Cedar Park</p>
                               <ul class="inline">
                                  <li>13010 W. Parmer Lane #500</li>
@@ -111,7 +111,7 @@
                      <div class="row">
                         <div class="col-xs-12">
                            <div class="location-info">
-                              <img src="../img/location-hyde.png" class="clip-circle" />
+                              <img src="img/location-hyde.png" class="clip-circle" />
                               <p>Hyde Park</p>
                               <ul class="inline">
                                  <li>5015 Duval St</li>
