--- a/rides.html
+++ b/rides.html
@@ -34,7 +34,7 @@
       <header class="rides">
          <nav>
             <div class="logo-left absolute-logo-left">
-                  <a href="http://www.peddlerbike.com" class="logo-white"></a>
+                  <a href="https://diggs00.github.io/thepeddler/" class="logo-white"></a>
             </div>
 
             <a href="javascript:void(0)" class="hamburger absolute-hamburger">
